# sonosregie

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  requirements.txt  sonos-scheduler.container  sonosregie.container
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  image.yml  release-please.yml
app/: db.py  main.py  models.py  reconciler.py  sonos.py
auth/: .env.example  authentik_bootstrap.py  set-mode.sh  sonos-scheduler-auth.container  sonosregie-auth.container
tests/: test_reconciler.py  test_validation.py
web/: index.html
